--- a/resources/defaults.css
+++ b/resources/defaults.css
@@ -1,13 +1,16 @@
 /* defaults */
-* {
+
+
+
+*, *::before, *::after {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
-::before, ::after {
-  box-sizing: inherit;
-}
+
+
+
 
 /* Set core body defaults */
 body {
