--- a/docs/resources/skin.css
+++ b/docs/resources/skin.css
@@ -10,7 +10,7 @@ body {
 
     display: flex;
     flex-wrap: wrap
-    gap: --var(--gap);
+    gap: 3rem;
     flex: 1 1 auto;
 }
 
@@ -21,8 +21,16 @@ header, main, footer {
     background-color: white;
     border-radius: 1rem;
     min-height: 10vh;
-    min-width: 30vw
+    min-width: 30vw;
+
 }
+
+footer {
+    width: 100vw;
+    background-color: aliceblue;
+}
+
+
 
 h1 {
     font-size: clamp(2rem, 10vw, 5rem);
