--- a/docs/app/ui/spacesuit/main.css
+++ b/docs/app/ui/spacesuit/main.css
@@ -1,3 +1,32 @@
+    .progress-bar {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 3rem;
+    background: #2a9b90;
+    background: linear-gradient(90deg,rgba(42, 155, 144, 1) 0%, rgba(87, 89, 199, 1) 50%, rgba(237, 160, 83, 1) 100%);
+    animation: move 22s linear infinite;
+    z-index: 1;
+}
+@keyframes move {
+    0% { transform: translateX(-100%); }
+    100% { transform: translateX(100%); }
+}
+
+
+main, footer, header {
+  padding: 1rem;
+  margin: 6rem;
+  background: #eee;
+}
+
+@font-face {
+  font-family: 'Arrival';
+  src: url('./fonts/ArrivalApercuMonoPro-Regular.woff2') format('woff2');
+}
+
+
+
 :root {
     --gap: 10rem;
     --padding: min(1rem, 3vw);
@@ -46,3 +75,6 @@ img, picture, video, canvas, svg {
   object-fit: contain;
   background-color: aliceblue;
 }
+
+
+
