--- a/docs/app/partials/progressbar.html
+++ b/docs/app/partials/progressbar.html
@@ -4,8 +4,8 @@
     position: fixed;
     top: 0; left: 0;
     width: 100vw;
-    height: .1rem;
-    background: #f84f20;
+    height: .2rem;
+    background: lightgray;
     animation: move 22s linear infinite;
     z-index: 1;
 }
