--- a/docs/app/partials/screensaver.html
+++ b/docs/app/partials/screensaver.html
@@ -1,4 +1,5 @@
 <style>
+/*
 #screensaver { 
     position: fixed;
     top: 0;
@@ -7,8 +8,9 @@
     height: 100vh;
     z-index: 9999;
 }
-.container {
-    background-color: #f9f9f976;
+*/
+#floating-images-container {
+    background-color: #f9f9f9db;
     position: relative;
     width: 100%;
     height: 100%;
@@ -17,11 +19,11 @@
     position: absolute;
     /* Initially hidden until positioned by JS */
     opacity: 0;
-    transition: opacity 0.5s ease;
+    transition: opacity .75s ease;
     max-height: 30vh;
 }
 </style>
-<div class="container" id="container">
+<div class="blur-overlay" id="floating-images-container">
     <img src="./content/gong.png" class="floating-image" alt="Floating Image 1">
     <img src="./content/cloud.png" class="floating-image" alt="Floating Image 2">
     <img width="200px" height="200px" src="./content/image-2.jpg" class="floating-image" alt="Floating Image 3" />
