--- a/docs/app/ui/spacesuit/main.css
+++ b/docs/app/ui/spacesuit/main.css
@@ -20,7 +20,7 @@
     --color-light: #f9f9f9;
     --gap: 10rem;
     --padding: min(1rem, 3vw);
-    --font-family: "SCTO", serif;
+    --font-family: "Arrival" , "SCTO", "Noto Sans SC", sans-serif;
 }
 
 
@@ -57,12 +57,7 @@ footer {
 
 
 
-/* typography */
-html, body {
-    font-family: var(--font-family), 'Noto Sans SC', sans-serif;
-    font-weight: 300;
-    letter-spacing: -.05em;
-}
+
 
 
 
@@ -82,3 +77,9 @@ img, picture, video, canvas, svg {
 
 
 
+/* typography */
+html, body {
+    font-family: var(--font-family);
+    font-weight: 300;
+    letter-spacing: -.05em;
+}
