--- a/docs/app/ui/spacesuit/main.css
+++ b/docs/app/ui/spacesuit/main.css
@@ -83,3 +83,8 @@ html, body {
     font-weight: 300;
     letter-spacing: -.05em;
 }
+
+nav a {
+    text-transform: uppercase;
+    font-size: 14px;
+}
