--- a/docs/app/ui/spacesuit/debug/debug.css
+++ b/docs/app/ui/spacesuit/debug/debug.css
@@ -5,11 +5,10 @@
     transition: all 0.25s 0.1s ease-in;
 }
 
-/* 
+/* */
 * * *:hover {
     background: url('./marching-ants-of-manhattan.svg');
     background-size: 100% 100%; 
     background-repeat: no-repeat;
     background-color: initial;
 }
-*/
