--- a/docs/app/partials/footer.html
+++ b/docs/app/partials/footer.html
@@ -4,7 +4,7 @@ footer {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 3rem;
-    background-color: aqua;
+    background-color: white;
     font-size: 12px;
 }
 
