a bunch of changes

--- a/docs/app/ui/spacesuit/layout.css
+++ b/docs/app/ui/spacesuit/layout.css
@@ -1,7 +1,5 @@
 /**
- *
  * layout
- *
  */
 body {
     display: flex;
@@ -10,15 +8,63 @@ body {
     padding: 3rem;
 }
 
-header {
+/* currently there is no need to define this,
+as the layout works withoult thus also */
+headerX {
+  flex: 0 0 auto;           /* take only as much space as needed */
+  flex-direction: column;   /* optional: keeps header items stacked */
 }
 
 main {
-};
+    flex: 1;                /* take up remaining space */ 
+}
 
 footer {
-};
+    flex-basis: 100%;
+}
 
+/* flex children */
+nav {
+    position: -webkit-sticky; /* for Safari */
+    position: sticky;
+    top: 30vh;
+    align-self: flex-start;
+    padding: var(--atom);
+}
+
+nav ul {
+    padding: 0;
+    margin: 0;
+}
+
+nav li {
+    margin: 0.5rem 0;
+}
+
+nav a {
+    color: var(--text-color);
+    text-transform: uppercase;
+}
+
+
+
+@media (max-width: 768px) {
+  body {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  header,
+  main {
+    width: 100%;
+  }
+}
+
+
+
+
+
+
+/* debug */
 header, main, footer {
-    background: url("./debug/marching-ants-of-manhattan.svg");
+    background-image: url("./debug/marching-ants-of-manhattan.svg");
 }
