--- a/docs/spaceface.app/spacesuit/random/two.css
+++ b/docs/spaceface.app/spacesuit/random/two.css
@@ -1,3 +1,3 @@
 body {
-    background: url('../svg/marks.svg');
+    background: url('./logo-sandorzsolt-620.svg') no-repeat center center 50% 50%;
 }
