--- a/docs/spaceface.app/spacesuit/variables.css
+++ b/docs/spaceface.app/spacesuit/variables.css
@@ -5,7 +5,7 @@
     --neutron: .3rem;
     --atom: 1rem;
     --molecule: 3rem;
-    --color-light: #f9f9f9;
+    --color-light: rgb(240, 240, 240);
     --gap: 10rem;
     --padding: min(1rem, 3vw);
     --font-family: "Arrival" , "SCTO", "Noto Sans SC", sans-serif;
