defaults and main css only

--- a/docs/spaceface/spacesuit/main.css
+++ b/docs/spaceface/spacesuit/main.css
@@ -1,9 +1,142 @@
 @import url("./defaults.css");
-@import url("./variables.css");
-@import url("./layout.css");
-@import url("./tipography.css");
-@import url("./feature.css");
 
+/**
+ * variables ////////////////////////////////////////////////
+ */
+:root {
+    --neutron: .3rem;
+    --atom: 1rem;
+    --molecule: 3rem;
+    --color-light: rgb(240, 240, 240);
+    --gap: 10rem;
+    --padding: min(1rem, 3vw);
+}
+
+
+
+
+/**
+ * layout ////////////////////////////////////////////////
+ */
+body {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 3rem;
+}
+
+/* currently there is no need to define this,
+as the layout works withoult thus also */
+headerX {
+  flex: 0 0 auto;           /* take only as much space as needed */
+  flex-direction: column;   /* optional: keeps header items stacked */
+}
+
+main {
+    flex: 1;                /* take up remaining space */
+}
+
+footer {
+    flex-basis: 100%;
+}
+
+/* flex children */
+nav {
+    position: -webkit-sticky; /* for Safari */
+    position: sticky;
+    top: 30vh;
+    align-self: flex-start;
+    padding: var(--atom);
+}
+
+nav ul {
+    padding: 0;
+    margin: 0;
+}
+
+nav li {
+    margin: 0.5rem 0;
+}
+
+nav a {
+    color: var(--text-color);
+    text-transform: uppercase;
+    font-size: inherit;
+}
+
+
+
+@media (max-width: 768px) {
+  body {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  header,
+  main {
+    width: 100%;
+  }
+}
+
+
+/* debug */
+header, main, footer {
+    /* background-image: url("./debug/marching-ants-of-manhattan.svg"); */
+}
+
+/*
+///////////////////////////////////////////////
+*/
+
+/**
+ * tipography
+ */
+@font-face {
+    font-family: spaceface;
+    src: url(./fonts/PPFraktionMono-Regular.woff2) format("woff2");
+    font-display: swap;
+}
+
+:root {
+  --fs-body: clamp(.75rem, 0.4rem + 0.5vw, 1rem);
+  --fs-h3: clamp(1.25rem, 1.1rem + 0.7vw, 1.75rem);
+  --fs-h2: clamp(1.5rem, 1.3rem + 1vw, 2.25rem);
+  --fs-h1: clamp(2rem, 1.5rem + 2vw, 3rem);
+}
+
+body {
+  font-size: var(--fs-body);
+  line-height: 1.6;
+  font-family: spaceface, system-ui, sans-serif;
+}
+
+h1, h2, h3 {
+  line-height: 1.2;
+}
+
+h1 {
+  font-size: var(--fs-h1);
+}
+
+h2 {
+  font-size: var(--fs-h2);
+}
+
+h3 {
+  font-size: var(--fs-h3);
+}
+
+
+
+
+
+
+
+
+
+
+/**
+ * main ////////////////////////////////////////////////
+ */
 
 body {
     background: rgb(240, 240, 240) url('./icons/sp-tv-face.svg') no-repeat center / 10% auto;
